@@ -57,6 +57,9 @@ Release 2.6.5 - UNRELEASED
     HADOOP-13192. org.apache.hadoop.util.LineReader cannot handle multibyte
     delimiters correctly. (binde via aajisaka)
 
+    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
+    time unit parameter. (zxu via rkanter)
+
 Release 2.6.4 - 2016-02-11
 
   INCOMPATIBLE CHANGES
